# devicescript-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  codeql-analysis.yml
boards/: esp32.d.ts  esp32archconfig.schema.json  esp32deviceconfig.schema.json  idf_component.yml  partitions.csv  regen.sh  sdkconfig.common
boards/esp32/: arch.json  esp32_bare.board.json  esp32_devkit_c.board.json  esp32_devkit_v1.board.json  m5stickc_plus.board.json  sdkconfig.esp32
boards/esp32c3/: adafruit_qt_py_c3.board.json  arch.json  esp32_c3fh4_rgb.board.json  esp32c3_bare.board.json  esp32c3_rust_devkit.board.json  esp32c3_supermini.board.json  esp32c3_supermini.json  kitten_grapebit_c3.board.json  kittenbot_grapebit_esp32c3.board.json  qtpyc3.board.json  sdkconfig.esp32c3  seeed_xiao_esp32c3.board.json  seeed_xiao_esp32c3_msr218.board.json
boards/esp32s2/: adafruit_feather_esp32_s2.board.json  arch.json  esp32s2_bare.board.json  feather_s2.board.json  msr207_v42.board.json  msr207_v43.board.json  msr207v43.board.json  msr48.board.json  sdkconfig.esp32s2
boards/esp32s3/: arch.json  esp32s3_bare.board.json  esp32s3_devkit_m.board.json  idf_component.yml  m5stack_cardputer.board.json  m5stack_m5stamp.board.json  sdkconfig.esp32s3
config/: partitions.csv  sdkconfig.common  sdkconfig.esp32c3  sdkconfig.esp32s2
main/: CMakeLists.txt  adc.c  azureiot.c  azureiothub.c  certs.c  ctrl.c  dmesg.c  dmesg.h  flash.c  hw-esp32.c  hw.h  i2c.c  ipipe.c  istream.c  jd_user_config.h  jdesp.h  jdlow.c  jdlow.h  jdprotocol.h  jdtcp.h  led.c  ledstrip.c  main.c  opipe.c  ostream.c  platform.c  rx.c  sdcard.c  sock.c  spi.c  ssl.c  tcp.c  tim.c  txq.c  uart.c  usb.c  utils.c  wifi.c  wifi_impl.c  worker.c
scripts/: ca-bundle.pem  certs.md  decode-stack.sh  filter-bundle.js  parsestack.js  uf2conv.py
