idf_component_register(
  SRCS 
    "main.c"
    "hw-esp32.c"
    "dmesg.c"
    "ctrl.c"
    "rx.c"
    "led.c"
    "worker.c"
    "../jacdac-c/source/jd_control.c"
    "../jacdac-c/source/jd_ipipe.c"
    "../jacdac-c/source/jd_opipe.c"
    "../jacdac-c/source/jd_physical.c"
    "../jacdac-c/source/jd_protocol.c"
    "../jacdac-c/source/jd_queue.c"
    "../jacdac-c/source/jd_send_util.c"
    "../jacdac-c/source/jd_services.c"
    "../jacdac-c/source/jd_util.c"
    "../jacdac-c/source/interfaces/event_queue.c"
    "../jacdac-c/source/interfaces/simple_rx.c"
    "../jacdac-c/source/interfaces/tx_queue.c"
    "../jacdac-c/services/jd_status_light.c"
    "../jacdac-c/services/power.c"
  INCLUDE_DIRS 
    "."
    "../jacdac-c/inc"
    "../jacdac-c"
)