idf_component_register(
  SRCS 
    "main.c"
    "hw-esp32.c"
    "dmesg.c"
    "ctrl.c"
    "rx.c"
    "led.c"
    "worker.c"
    "flash.c"
    "usb.c"
    "wifi.c"
    "utils.c"
    "platform.c"
    "azureiothub.c"
    "../build/version.c"
    "../jacdac-c/source/jd_control.c"
    "../jacdac-c/source/jd_ipipe.c"
    "../jacdac-c/source/jd_opipe.c"
    "../jacdac-c/source/jd_physical.c"
    "../jacdac-c/source/jd_protocol.c"
    "../jacdac-c/source/jd_queue.c"
    "../jacdac-c/source/jd_send_util.c"
    "../jacdac-c/source/jd_services.c"
    "../jacdac-c/source/jd_util.c"
    "../jacdac-c/source/interfaces/event_queue.c"
    "../jacdac-c/source/interfaces/simple_rx.c"
    "../jacdac-c/source/interfaces/tx_queue.c"
    "../jacdac-c/services/jd_status_light.c"
    "../jacdac-c/services/power.c"
    "../jacdac-c/client/rolemgr.c"
    "../jacdac-c/client/routing.c"
    "../jacdac-c/jacscript/buffer.c"
    "../jacdac-c/jacscript/fibers.c"
    "../jacdac-c/jacscript/jacscript.c"
    "../jacdac-c/jacscript/jacscriptmgr.c"
    "../jacdac-c/jacscript/jdiface.c"
    "../jacdac-c/jacscript/math.c"
    "../jacdac-c/jacscript/regcache.c"
    "../jacdac-c/jacscript/step.c"
    "../jacdac-c/jacscript/strformat.c"
    "../jacdac-c/jacscript/value.c"
    "../jacdac-c/jacscript/verify.c"
    "../jacdac-c/jacscript/jacscloud.c"
    "../jacdac-c/jacscript/tsagg.c"
    "../jacdac-c/jacdac/dist/c/jd_spec_pack.c"

  INCLUDE_DIRS 
    "."
    "../jacdac-c/inc"
    "../jacdac-c/jacscript"
    "../jacdac-c"
)